--- a/examples/mrm-compose/docker-compose.yml
+++ b/examples/mrm-compose/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - RAILS_SERVE_STATIC_FILES=true
 
   maxpanel:
-    image: skord/maxpanel
+    image: skord/maxpanel:edge
     depends_on:
       - maxscale
     environment:
@@ -32,7 +32,7 @@ services:
       - "18080:80"
 
   maxscale:
-    build: ../../maxscale
+    build: ../../maxscale-edge
     environment:
       - MAXSCALE_CONSUL_ADDR=consul:8500
     depends_on:
