--- a/examples/mrm-compose/docker-compose.yml
+++ b/examples/mrm-compose/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - "18080:80"
 
   maxscale:
-    build: ../../maxscale-edge
+    image: skord/maxscale:edge-consul
     environment:
       - MAXSCALE_CONSUL_ADDR=consul:8500
     depends_on:
@@ -76,8 +76,7 @@ services:
     stdin_open: true
 
   mariadb1:
-    image: mariadb
-    build: ../../mariadb/10.1
+    image: skord/mariadb:10.1-alpine-consul
     command: --log-bin --skip-name-resolve --server_id=1 --sync_binlog=1 --innodb_flush_log_at_trx_commit=1 --userstat=1 --innodb_monitor_enable=all --plugin-load=query_response_time --query_response_time_stats=1 --performance_schema=on
     environment:
       - MYSQL_ROOT_PASSWORD=rootpassword
@@ -118,8 +117,7 @@ services:
       - '-collect.perf_schema.tablelocks=true'
 
   mariadb2:
-    image: mariadb
-    build: ../../mariadb/10.1
+    image: skord/mariadb:10.1-alpine-consul
     command: --log-bin --skip-name-resolve --server_id=2 --sync_binlog=1 --innodb_flush_log_at_trx_commit=1 --userstat=1 --innodb_monitor_enable=all --plugin-load=query_response_time --query_response_time_stats=1 --performance_schema=on
     environment:
       - MYSQL_ROOT_PASSWORD=rootpassword
@@ -161,8 +159,7 @@ services:
 
 
   mariadb3:
-    image: mariadb
-    build: ../../mariadb/10.1
+    image: skord/mariadb:10.1-alpine-consul
     command: --log-bin --skip-name-resolve --server_id=3 --sync_binlog=1 --innodb_flush_log_at_trx_commit=1 --userstat=1 --innodb_monitor_enable=all --plugin-load=query_response_time --query_response_time_stats=1 --performance_schema=on
     environment:
       - MYSQL_ROOT_PASSWORD=rootpassword
@@ -202,8 +199,7 @@ services:
         - '-collect.perf_schema.tablelocks=true'
 
   mariadb4:
-    image: mariadb
-    build: ../../mariadb/10.1
+    image: skord/mariadb:10.1-alpine-consul
     command: --log-bin --skip-name-resolve --server_id=4 --sync_binlog=1 --innodb_flush_log_at_trx_commit=1 --userstat=1 --innodb_monitor_enable=all --plugin-load=query_response_time --query_response_time_stats=1 --performance_schema=on
     environment:
       - MYSQL_ROOT_PASSWORD=rootpassword
@@ -250,8 +246,7 @@ services:
         - '-collect.perf_schema.tablelocks=true'
 
   mariadb5:
-    image: mariadb
-    build: ../../mariadb/10.1
+    image: skord/mariadb:10.1-alpine-consul
     command: --log-bin --skip-name-resolve --server_id=5 --sync_binlog=1 --innodb_flush_log_at_trx_commit=1 --userstat=1 --innodb_monitor_enable=all --plugin-load=query_response_time --query_response_time_stats=1 --performance_schema=on
     environment:
       - MYSQL_ROOT_PASSWORD=rootpassword
