--- a/maxscale-edge/Dockerfile
+++ b/maxscale-edge/Dockerfile
@@ -10,17 +10,16 @@ RUN git clone https://github.com/mariadb-corporation/MaxScale
 WORKDIR /root/MaxScale
 RUN git checkout develop
 WORKDIR /root
-RUN mkdir -p /root/build
+RUN mkdir -p /root/build /var/run/maxscale /var/cache/maxscale
 WORKDIR /root/build
 RUN cmake ../MaxScale -DBUILD_TESTS=N -DWITH_SCRIPTS=N -DMAKE_INSTALL_PREFIX=/usr
 RUN make && make install
-RUN yum install -y unzip
 WORKDIR /
-ADD https://releases.hashicorp.com/consul-template/0.16.0/consul-template_0.16.0_linux_amd64.zip /tmp/consul-template.zip
-RUN unzip /tmp/consul-template.zip
-RUN mv /consul-template /usr/bin/consul-template \
-    && chmod +x /usr/bin/consul-template
-ADD templates /etc/consul-template/templates
-ADD startup.sh restart_maxscale.sh /
-RUN chmod +x startup.sh restart_maxscale.sh
-CMD ["/startup.sh"]
+ADD maxscale.sh /
+RUN chmod +x maxscale.sh
+RUN rm -rf /root/build /root/MaxScale
+COPY maxscale.cnf /etc/maxscale.cnf
+COPY maxadminfile /root/.maxadmin
+RUN mkdir -p /tmp/maxadmin
+VOLUME /tmp/maxadmin
+CMD ["/maxscale.sh"]
